# gsax

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  benchmark_salib.py  development.py  main.py  plan.md  pyproject.toml  ruff.toml
.github/workflows/: docs-check.yml  docs.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: analyze.md  hdmr.md  index.md  problem.md  sampling.md
docs/examples/: advanced-workflow.md  basic.md  batch_reactor.md  bootstrap.md  cstr.md  hdmr.md  multi-output.md  non-uniform-inputs.md  save-load.md  xarray.md
docs/guide/: benchmarks.md  getting-started.md  methods.md
docs/public/notebooks/: batch_reactor_gsa.html  cstr_gsa.html
examples/: batch_reactor_gsa.py  cstr_gsa.py
scripts/: check_api_docs_coverage.py  check_vitepress_pager.py
src/gsax/: __init__.py  _bootstrap.py  _hdmr.py  _indices.py  _normalization.py  analyze.py  analyze_hdmr.py  problem.py  results.py  results_hdmr.py  sampling.py  skill.py
src/gsax/_skill/: gsax.md
src/gsax/benchmarks/: ishigami.py
tests/: test_analyze.py  test_cleaning.py  test_hdmr.py  test_indices.py  test_problem.py  test_sampling.py  test_save_load.py  test_shapes.py  test_xarray.py
