[project]
name = "gsax"
version = "0.4.0"
description = "Global Sensitivity Analysis in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "pandas>=3.0.1",
    "scipy>=1.10",
    "xarray>=2026.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "SALib>=1.4"]
xlsx = ["openpyxl>=3.1"]
parquet = ["pyarrow>=14"]
all = ["openpyxl>=3.1", "pyarrow>=14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
